--- a/MVC/app/views/tasks/index.html.erb
+++ b/MVC/app/views/tasks/index.html.erb
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>MVC</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
+<h1> Check this out </h1>
+
 <body>
 <section id="todoapp">
 			<header id="header">
@@ -69,7 +63,4 @@
 		<script src="node_modules/todomvc-common/base.js"></script>
 		<script src="js/app.js"></script>
 
-<%= yield %>
-
-</body>
-</html>
+	</body>
