--- a/MVC/app/views/todo_items/_form.html.erb
+++ b/MVC/app/views/todo_items/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_for (@todo_list, @todo_list.todo_items.build) do |f| %>
+<%= form_for ([@todo_list, @todo_list.todo_items.build]) do |f| %>
 	<%= f.text_field :content, placeholder: "New Todo" %>
 		<%= f.submit %>
-<%= end %>
+<% end %>
 
