--- a/MVC/app/views/todo_lists/show.html.erb
+++ b/MVC/app/views/todo_lists/show.html.erb
@@ -10,7 +10,7 @@
   <%= @todo_list.description %>
 </p>
 
-<div id="todo_items_wrapper" %>
+<div id="todo_items_wrapper" >
 	<%= render @todo_list.todo_items %>
 	<div id="form">
 		<%= render "todo_items/form" %>
