--- a/MVC/app/views/todo_items/_todoitems.html.erb
+++ b/MVC/app/views/todo_items/_todoitems.html.erb
@@ -1,6 +1,8 @@
 <p><%= todo_item.content %></p>
 	<%= link_to "Delete", todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: {confirm: "Are you sure?"} %>
-<%= link_to "Mark as Complete", complete_todo_list_do_item_path(@todo_list, todo_item.id), method: :patch %>
+<%= link_to complete_todo_list_do_item_path(@todo_list, todo_item.id), method: :patch do %>
+	<i style="opacity: 0.4;" class="fa fa-check"></i>
+	<% end %>
 
 <div class="row clearfix">
 	<% if todo_item.completed? %>
@@ -11,17 +13,23 @@
 			<p style="opacity: 0.4;"><strike><%= todo_item.content %></strike></p>
 		</div>
 	<div class="trash">
-		<%= link_to "Delete", todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: {confirm: "Are you sure?"} %>
+		<%= link_to todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: {confirm: "Are you sure?"} do %>
+			<i class="fa fa-trash" </i>
+	<% end %>
 	</div>
 	<% else %>
 		<div class="complete">
-			<%= link_to "Mark as Complete", complete_todo_list_do_item_path(@todo_list, todo_item.id), method: :patch %>
+			<%= link_to complete_todo_list_do_item_path(@todo_list, todo_item.id), method: :patch do %>
+	<i class="fa fa-check"></i>
+	<% end %>
 		</div>
 		<div class="todo_item">
 			<p><%= todo_item.content %></p>
 		</div>
 	<div class="trash">
-		<%= link_to "Delete", todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: {confirm: "Are you sure?"} %>
+		<%= link_to todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: {confirm: "Are you sure?"} do %>
+			<i class="fa fa-trash" </i>
+	<% end %>
 	</div>
 	<% end %>	
 </div>
