--- a/MVC/app/views/todo_lists/new.html.erb
+++ b/MVC/app/views/todo_lists/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Todo List</h1>
+<h1 class="todo_list_tile">New Todo List</h1>
 
+
+<div class="forms">
 <%= render 'form' %>
+</div>
 
+<div class="links">
 <%= link_to 'Back', todo_lists_path %>
+</div>
